<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_margin="8dp"
                android:autofillHints="@string/hint_item"
                android:hint="@string/hint_item"
                android:inputType="text" />


            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/item"
                android:layout_marginTop="32dp"
                android:background="@color/purple_200"
                android:text="@string/save_button"
                android:textColor="#000000" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>