<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_color"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_person_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:background="@drawable/bg"
        >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:background="@drawable/button_bg"
            android:padding="16dp"
            android:layout_marginTop="60dp"
            android:id="@+id/username"
            android:drawableRight="@drawable/ic_outline_email_24"
            />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:background="@drawable/button_bg"
            android:padding="16dp"
            android:layout_marginVertical="20dp"
            android:drawableRight="@drawable/ic_outline_lock_24"
            android:id="@+id/password"
            android:inputType="textPassword"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/button_bg_login"
            android:text="@string/login"
            android:id="@+id/login"
            />

    </LinearLayout>


</LinearLayout>